--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-native-xml2js": "^1.0.3",
     "styled-components": "^5.3.3",
@@ -30,6 +31,8 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/styled-components": "^5.1.18",
+    "@types/styled-components-react-native": "^5.1.3",
     "@types/xml2js": "^0.4.9",
     "typescript": "~4.3.5"
   },
