--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-vector-icons": "^6.4.10",
     "@types/styled-components": "^5.1.18",
     "@types/styled-components-react-native": "^5.1.3",
     "@types/xml2js": "^0.4.9",
