--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,18 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "jsx": "react-native",
     "paths": {
-      "@screens/*": ["./screens/*"],
-      "@utilities/*": ["./utilities/*"],
-      "@context/*": ["./context/*"],
-      "@components/*": ["./components/*"],
-      "@navigators/*": ["./navigators/*"],
-      "@theme/*": ["./theme/*"],
-      "@shared/*": ["./shared/*"],
-      "RootComponent": ["./Root.tsx"]
+      "@screens/*": ["./src/screens/*"],
+      "@utilities/*": ["./src/utilities/*"],
+      "@context/*": ["./src/context/*"],
+      "@components/*": ["./src/components/*"],
+      "@navigators/*": ["./src/navigators/*"],
+      "@theme/*": ["./src/theme/*"],
+      "@shared/*": ["./src/shared/*"],
+      "@public/*": ["./assets/*"],
+      "RootComponent": ["./src/Root.tsx"]
     }
   }
 }
