--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
+    "date-fns": "^2.28.0",
     "expo": "~43.0.2",
+    "expo-app-loading": "~1.2.1",
     "expo-asset": "^8.4.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
