--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-app-loading": "~1.2.1",
     "expo-asset": "^8.4.3",
     "expo-status-bar": "~1.1.0",
+    "lodash": "^4.17.21",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/lodash": "^4.14.178",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/react-native-vector-icons": "^6.4.10",
