--- a/package.json
+++ b/package.json
@@ -15,25 +15,35 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "@unimodules/core": "~7.2.0",
     "axios": "^0.24.0",
     "date-fns": "^2.28.0",
     "expo": "~43.0.2",
     "expo-app-loading": "~1.2.1",
     "expo-asset": "^8.4.3",
+    "expo-file-system": "~13.0.3",
+    "expo-intent-launcher": "~10.0.3",
+    "expo-linking": "~2.4.2",
     "expo-status-bar": "~1.1.0",
+    "expo-web-browser": "~10.0.3",
     "lodash": "^4.17.21",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-hold-menu": "^0.1.1",
+    "react-native-reanimated": "~2.2.0",
     "react-native-render-html": "^6.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
+    "react-native-unimodules": "~0.15.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-native-xml2js": "^1.0.3",
     "styled-components": "^5.3.3",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "expo-sharing": "~10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
