--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-xml2js": "^1.0.3",
     "styled-components": "^5.3.3",
     "url": "^0.11.0",
-    "expo-sharing": "~10.0.3"
+    "expo-sharing": "~10.0.3",
+    "expo-local-authentication": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
