--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "expo-file-system": "~13.0.3",
     "expo-intent-launcher": "~10.0.3",
     "expo-linking": "~2.4.2",
+    "expo-local-authentication": "~12.0.1",
+    "expo-sharing": "~10.0.3",
     "expo-status-bar": "~1.1.0",
     "expo-web-browser": "~10.0.3",
     "lodash": "^4.17.21",
@@ -42,9 +44,7 @@
     "react-native-web": "0.17.1",
     "react-native-xml2js": "^1.0.3",
     "styled-components": "^5.3.3",
-    "url": "^0.11.0",
-    "expo-sharing": "~10.0.3",
-    "expo-local-authentication": "~12.0.1"
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
