--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-native-web": "0.17.1",
     "react-native-xml2js": "^1.0.3",
     "styled-components": "^5.3.3",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "expo-clipboard": "~2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
