--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-local-authentication": "~12.0.1",
     "expo-sharing": "~10.0.3",
     "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.15",
     "expo-web-browser": "~10.0.3",
     "lodash": "^4.17.21",
     "react": "17.0.1",
