--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-hold-menu": "^0.1.1",
     "react-native-reanimated": "~2.2.0",
@@ -46,6 +47,7 @@
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-native-xml2js": "^1.0.3",
+    "react-navigation-collapsible": "^6.3.0",
     "styled-components": "^5.3.3",
     "url": "^0.11.0"
   },
