--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-hold-menu": "^0.1.1",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-render-html": "^6.3.1",
     "react-native-safe-area-context": "3.3.2",
@@ -48,6 +49,7 @@
     "react-native-web": "0.17.1",
     "react-native-xml2js": "^1.0.3",
     "react-navigation-collapsible": "^6.3.0",
+    "studentvue": "^1.0.6",
     "styled-components": "^5.3.3",
     "url": "^0.11.0"
   },
